# Budgetease

./: .gitignore  FEATURES.md  README.md  ZOLT_Design_System_v3.md  ZOLT_Design_System_v4.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  unwrap_cards.py  user_flow.md  user_flow.mmd  vercel.json  vite.config.ts
budgetease_flutter/: .gitignore  BUILD_SESSION_SUMMARY.md  README.md  analysis_options.yaml  build.yaml  build_log.txt  build_log_2.txt  build_log_3.txt  pubspec.yaml  refactor_theme_2.py  theme_diff.txt  ui_diff.txt  wrap_cards.py  wrap_cards2.py  wrap_cards3.py
budgetease_legacy/: BUILD_ISSUE.md  PHASE4_UI_GUIDE.md  README.md  build.yaml  build_log.txt  build_log_2.txt  pubspec.yaml
docs/: ADB_AUTHORIZATION.md  ADB_TROUBLESHOOTING.md  FINAL_OPTIONS.md  INSTALLATION_GUIDE.md  INSTALL_MANUAL.md  RELEASE.md  STRUCTURE.md
zolt_engine/: Cargo.toml  DOCUMENTATION.md  FLUTTER_INTEGRATION.md
zolt_engine/.cargo/: config.toml
zolt_engine/src/: analytics.rs  behavioral_insights.rs  cash_tracker.rs  classifier.rs  compute_verifier.rs  credit_score.rs  cycle_close.rs  cycle_detector.rs  fraud_detector.rs  health_score.rs  income_predictor.rs  lib.rs  narrative_engine.rs  notifications.rs  ops.rs  receipt_parser.rs  scenario_engine.rs  session.rs  session_v2.rs  sms_parser.rs  tight_month.rs  triage_scorer.rs  types.rs
zolt_engine/src/adaptive/: adjustment.rs  anomaly.rs  memory.rs  mod.rs  prediction.rs  profile.rs
zolt_engine/src/deterministic/: mod.rs
zolt_engine/src/ffi/: mod.rs
zolt_engine/src/surface/: mod.rs
(+276 files in other folders)
