[package]
name        = "zolt_engine"
version = "1.4.0"
edition     = "2021"
description = "Zolt — Moteur IA financier on-device pour Flutter/FFI"

[lib]
name        = "zolt_engine"
crate-type  = ["cdylib", "rlib"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
